[package]
name = "prj3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
futures = "0.3.16"
aws-sdk-s3 = "0.24.0"
csv = "1.1.6"
tokio = { version = "1.16.1", features = ["full"] }